# checkers-ai

./: Board.h  BoardTile.h  CMakeLists.txt  CheckersApp  cMain.cpp  makefile  run.sh
include/: Board.h  BoardTile.h  CMakeLists.txt  CheckersApp.h  Game.h  MiniMaxAI.h  Token.h  Tokens.h  cMain.h
resources/: test.xbm  test.xpm
src/: Board.cpp  BoardTile.cpp  BoardTile.cpp.in  CMakeLists.txt  CheckersApp.cpp  Game.cpp  MiniMaxAI.cpp  Token.cpp  Tokens.cpp  cMain.cpp
